# nanobot-desktop

./: README.md  SOUL.md
nanobot-desktop/: .gitignore  MAINTENANCE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
nanobot-desktop/scripts/: install_mac.sh  prepare_runtime.py
nanobot-desktop/src/: App.tsx  main.tsx  styles.css  types.ts
nanobot-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nanobot-desktop/src-tauri/src/: indexer.rs  main.rs  oauth.rs  tray.rs  vector.rs
nanobot-desktop/src/components/: AttachmentBar.tsx  ChatMessageItem.tsx  ConfigPanel.tsx  CronPanel.tsx  DropZone.tsx  ErrorBoundary.tsx  MemoryPanel.tsx  ModelDropdown.tsx  ModelPanel.tsx  MonitorPanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx  SidePanel.tsx  Sidebar.tsx  SkillsPanel.tsx  ToastContainer.tsx
nanobot-desktop/src/hooks/: useChat.ts  useProcesses.ts  useSettings.tsx  useToast.ts
nanobot-desktop/src/utils/: cronUtils.ts  helpers.ts  i18n.ts  logUtils.ts  providerRegistry.ts
nanobot/cli/: commands.py
nanobot/utils/: network.py  stability.py
