[package]
name = "nanobot-desktop"
version = "0.1.0"
description = "Nanobot Desktop"
authors = ["nanobot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
open = "5.3.3"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-dialog = "2.6.0"
tiny_http = "0.12.0"
url = "2.5.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
